# ncd

./: .gitignore  Cargo.toml  README.md
crates/libncd/: Cargo.toml
crates/libncd-runtime/: Cargo.toml
crates/libncd-runtime/benches/: latency.rs  throughput.rs
crates/libncd-runtime/src/: config.rs  connection.rs  error.rs  lib.rs  runtime.rs  status.rs
crates/libncd-runtime/tests/: integration.rs
crates/libncd/src/: codec.rs  error.rs  frame.rs  lib.rs  packet.rs
crates/libncd/src/protocol/: codec.rs  frame.rs  mod.rs  packet.rs
crates/ncd/: Cargo.toml  README.md  build.rs
crates/ncd/adapters/: adapter_list.toml  base.py  camera.py  dummy.py  file.py  instruction.py  keyboard.py  pyproject.toml
crates/ncd/drivers/: keyboard.py  pyproject.toml  serial.py  template.py
crates/ncd/src/: app.rs  config.rs  connection.rs  device.rs  driver.rs  error.rs  lib.rs  main.rs  registry.rs  runtime.rs  session.rs  tui.rs
crates/ncd/src/adapter_loader/: adapter.rs  bundle.rs  list.rs  mod.rs
crates/ncd/src/driver_loader/: driver.rs  mod.rs  registry.rs
crates/ncd/src/drivers/: camera.rs  keyboard.rs  mod.rs  serial.rs  ssh.rs
crates/ncd/src/ui/: mod.rs  render.rs  state.rs
crates/ncd/tests/: integration_camera.rs  integration_session.rs
crates/ncdd/: Cargo.toml  README.md  build.rs
crates/ncdd/src/: config.rs  device.rs  device_parser.rs  driver.rs  main.rs  netlink.rs  start.rs
crates/ncdd/test/: test_e2e.py
demo/: README.md  camera_server.py  instruction.py  ncd_tui.py
demos/: NCD_REMOTE_DEVICE_GUIDE.md  camera_linux.py  file_linux.py  instruction_linux.py  keyboard_linux.py  ncd_device.py  pyproject.toml
driver/: Makefile  ncd.c
driver/src/: ncd.c
test/: README.md  ncd_tui.py  test_all.py  test_ncd_tui_protocol.py
