[workspace]
resolver = "3"
members = [
    "crates/libncd",
    "crates/ncdd",
    "crates/libncd-runtime",
    "crates/ncd",
]

[workspace.dependencies]
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "net",
    "io-util",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
] }
