[package]
name = "libncd-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libncd = { path = "../libncd" }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = "1.12.0"
rand = "0.10.2"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
