[package]
name = "libncd-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libncd = { path = "../libncd" }
tokio.workspace = true
thiserror.workspace = true
rand.workspace = true
bytes.workspace = true

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
