[package]
name = "ncd"
version = "0.1.0"
edition = "2024"

[dependencies]
libncd-runtime = { path = "../libncd-runtime" }
thiserror.workspace = true
tokio = { workspace = true }
crossterm = "0.28"
serialport = "4.0"
glob = "0.3"
regex = "1"
objc = { version = "0.2", optional = true }
windows = { version = "0.48.0", optional = true }

nokhwa = { version = "0.10", features = ["input-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
