[package]
name = "ncd"
version = "0.1.0"
edition = "2024"

[dependencies]
libncd-runtime = { path = "../libncd-runtime" }
tokio = { workspace = true, features = ["process", "signal"] }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6.0.0"
