[package]
name = "ncd"
version = "0.1.0"
edition = "2024"

[package.metadata.python-bundle]
# Set the Python version and PBS release to match the bundle used in libncd-runtime.
python-version = "3.13.14"
pbs-release = "20260623"

[dependencies]
libncd-runtime = { path = "../libncd-runtime" }
tokio = { workspace = true, features = ["process", "signal"] }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6.0.0"
zip = "2"
sha2 = "0.10"

[build-dependencies]
zip = "2"
ureq = { version = "2", default-features = false, features = [
    "gzip",
    "tls",
] }
flate2 = "1"
tar = "0.4"
toml = "0.8"
sha2 = "0.10"
