[package]
name = "ncdd"
version = "0.1.0"
edition = "2024"

[dependencies]
libncd-runtime = { path = "../libncd-runtime" }
tokio = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
libc = "0.2.186"
tar = "0.4"
tempfile = "3"

[build-dependencies]
tar = "0.4"
walkdir = "2"
