[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ncd-adapters"
version = "0.1.0"
description = "NCD host-side device adapter drivers"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "pynput",
    "evdev; platform_system == 'Linux'",
    "python-xlib; platform_system == 'Linux'",
]

[tool.setuptools]
py-modules = [
    "base", 
    "file", 
    "camera",
    "keyboard",
    "instruction"
]
