[project]
name = "ncd-drivers"
version = "0.1.0"
description = "NCD host-side device drivers"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pynput>=1.7",
]

[tool.hatch.build.targets.wheel]
# Flat layout: all .py files are standalone driver scripts, not a package
only-include = ["*.py"]
